--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 
 <body>
   <div class="cards">
-    <div class="card">
+    <div class="card" data-description="test1">
       <img src="https://picsum.photos/200?random=1" alt="lol">
       <h2>lol</h2>
       <button>Learn more →</button>
     </div>
-    <div class="card">
+    <div class="card" data-description="test2">
       <img src="https://picsum.photos/200?random=2" alt="lol">
       <h2>lmao</h2>
       <button>Learn more →</button>
     </div>
-    <div class="card">
+    <div class="card" data-description="test3">
       <img src="https://picsum.photos/200?random=3" alt="lol">
       <h2>omg</h2>
       <button>Learn more →</button>
     </div>
-    <div class="card">
+    <div class="card" data-description="test4">
       <img src="https://picsum.photos/200?random=4" alt="lol">
       <h2>gg</h2>
       <button>Learn more →</button>
