--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 
 <body>
   <div class="cards">
-    <div class="card" data-description="test1">
+    <div class="card" data-description="Card 1 description">
       <img src="https://picsum.photos/200?random=1" alt="lol">
-      <h2>lol</h2>
+      <h2>Card 1</h2>
       <button>Learn more →</button>
     </div>
-    <div class="card" data-description="test2">
+    <div class="card" data-description="Card 2 description">
       <img src="https://picsum.photos/200?random=2" alt="lol">
-      <h2>lmao</h2>
+      <h2>Card 2</h2>
       <button>Learn more →</button>
     </div>
-    <div class="card" data-description="test3">
+    <div class="card" data-description="Card 3 description">
       <img src="https://picsum.photos/200?random=3" alt="lol">
-      <h2>omg</h2>
+      <h2>Card 3</h2>
       <button>Learn more →</button>
     </div>
-    <div class="card" data-description="test4">
+    <div class="card" data-description="Card 4 description">
       <img src="https://picsum.photos/200?random=4" alt="lol">
-      <h2>gg</h2>
+      <h2>Card 4</h2>
       <button>Learn more →</button>
     </div>
   </div>
